tests/integration/error/qualified_path_too_deep_function.alo
// expect-error: Qualified function calls currently require exactly two path segments

fun main() -> void {
    ast::Expr::BinOp::Mul();
}
